{
    "name": "EnviromentSceneInput",
    "maps": [
        {
            "name": "GeneralInputs",
            "id": "f3979002-95b8-45c1-996e-767d76a3f882",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "d7819d5d-82fd-4aaa-9527-25601b82535b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapBetweenCreatures",
                    "type": "Button",
                    "id": "2a31a9f2-9158-43bb-bd7c-ee280f5e6651",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FoucsPlayer",
                    "type": "Button",
                    "id": "3035f0aa-7df5-4848-ae51-c0472b0a4c95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b5ff4dc-4b05-492a-bdbe-aaa24dcb30a3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50e0dfed-d2bc-4bb9-9e20-015398dfbb87",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapBetweenCreatures",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "537b93d4-7f0f-4c51-91dc-cbb447749cbc",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FoucsPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Creature",
            "id": "6cbb12c1-0309-46a8-b499-8c20dad85a5b",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "762c3dcd-89d4-430e-bb76-fca91f6a452a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "764a7556-97fd-4a54-9d54-b8dcede89aa2",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "player",
            "id": "be122182-30c3-4499-b309-201b1dd6f8b3",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "f9bc3145-bfdb-4629-9b9f-6f6abcdd3aab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "afe0738b-db64-4495-a256-af7ae2ab3d6f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}